...
                      ),
                      const SizedBox(height: 20),
                    ],
                    const Text("Email address", style: TextStyle(fontSize: 15)),
                    const SizedBox(height: 10),
                    UserField(
                      fieldKey: const Key("login_email"),
                      label: "Your email",
                      controller: emailController,
                      keyboardType: TextInputType.emailAddress,
                      textInputAction: TextInputAction.next,
                      autofillHints: const [AutofillHints.email],
                    ),
                    const SizedBox(height: 20),
                    const Text("Password", style: TextStyle(fontSize: 15)),
                    const SizedBox(height: 10),
                    UserField(
                      fieldKey: const Key('login_password'),
                      label: "Password",
                      obscureText: true,
                      controller: passwordController,
                      textInputAction:
                          isLogin ? TextInputAction.done : TextInputAction.next,
                      autofillHints: const [AutofillHints.password],
...
                        autofillHints: const [AutofillHints.password],
                      ),
                      const SizedBox(height: 20),
                    ],
                    const SizedBox(height: 50),
                    AppButton(
                      key: const Key('login_button'),
                      text: isLogin ? "Sign In" : "Sign Up",
                      onPressed: _handleAuth,
                      isLoading: isLoading,
                      enabled: !isLoading,
                    ),
                    if (isLogin) ...[
...
