...
            SettingsScreen(isLoggedIn: widget.isLoggedIn),
          ];

    final List<BottomNavigationBarItem> items = widget.isLoggedIn
        ? [
            BottomNavigationBarItem(icon: Image.asset('assets/images/explore.png',width: 24, height: 24,), label: "Explore"), 
            BottomNavigationBarItem(icon: Image.asset('assets/images/calendar.png',width: 24, height: 24,), label: "Calendar"),
            BottomNavigationBarItem(icon: Image.asset('assets/images/saved.png',width: 24, height: 24,),label: "Saved"),
            BottomNavigationBarItem(icon: Image.asset('assets/images/settings.png',width: 24, height: 24,), label: "Settings"),
          ]
        : [
            BottomNavigationBarItem(icon: Image.asset('assets/images/explore.png',width: 24, height: 24,), label: "Explore"),
            BottomNavigationBarItem(icon: Image.asset('assets/images/settings.png',width: 24, height: 24,), label: "Settings"),
...
